--- a/evensplit.html
+++ b/evensplit.html
@@ -2,6 +2,8 @@
 
 <html>
 	<head>
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+
 		<script type="text/javascript" src="jquery-3.1.1.slim.js"></script>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -18,21 +20,21 @@
 
 	</head>
 	<body>
-        <nav class="navbar navbar-default">
+        <nav class="navbar-collapse">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> JTT alpha - Even Split By Hours
+                        <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> JTT alpha - Even Split
                     </a>
                 </div>
             </div>
         </nav>
 
         <div class='container-fluid' id="employeeNameEntryContainer">
-            <h3>Step 1: Employee Name Entry <span class="glyphicon glyphicon-user" aria-hidden="true"></span></h3>
+            <h3>Step 1: Add Employees <span class="glyphicon glyphicon-user" aria-hidden="true"></span></h3>
 
             <!--Employee Name Form-->
-			<div class="col-sm-6">
+			<div class="col-md-12">
 				<label for="employeeNameInput">Employee Name:</label>
 			    <div class="input-group input-group-md">
 			      	<input type="text" class="form-control" id="employeeNameInput" placeholder="Jane Doe">
@@ -47,15 +49,15 @@
         </div>
 
         <div class="container-fluid" id="employeeEntryNav">
-            <div class='col-sm-6' align="center">
-                <button id="proceedToEmployeeHoursEntry" class="btn btn-default">Proceed to Time Entry <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+            <div class='col-md-12' align="center">
+                <button id="proceedToEmployeeHoursEntry" class="btn btn-default">Enter Hours <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
             </div>
         </div>
 
         <div class="container-fluid hidden" id="employeeHoursEntryContainer">
-            <h3>Step 2: Employee Hours Entry <span class="glyphicon glyphicon-time" aria-hidden="true"></span></h3>
+            <h3>Step 2: Enter Hours <span class="glyphicon glyphicon-time" aria-hidden="true"></span></h3>
             <!--Employee Hours Entry-->
-			<div class="col-sm-6">
+			<div class="col-md-12">
                 <label for="employeeHoursEntry">Enter the number of hours worked by each employee:</label>
 				<div id="employeeHoursEntry"></div>
 			</div>
@@ -63,33 +65,35 @@
         <br>
 
         <div class="container-fluid hidden" id="hoursEntryNav">
-            <div class='col-sm-6' align="center">
-                <button id="backToEmployeeEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back to Employee Entry</button>
-                <button id="proceedToRevenueEntry" class="btn btn-default">Proceed to Revenue Entry <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+            <div class='col-md-12' align="center">
+                <button id="backToEmployeeEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Add Employees</button>
+                <button id="proceedToRevenueEntry" class="btn btn-default">Enter Tips <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
             </div>
         </div>
 
         <div class="container-fluid hidden" id="revenueEntryContainer">
-            <h3>Last Step: Tip Revenue Entry <span class="glyphicon glyphicon-usd" aria-hidden="true"></span></h3>
+            <h3>Last Step: Tip Entry <span class="glyphicon glyphicon-usd" aria-hidden="true"></span></h3>
 
             <!--Total Tip Revenue Entry-->
-            <div class="col-sm-6">
-                <label for="tipRevenueCredit">Enter total tip revenue from credit transactions:</label>
+            <div class="col-md-12">
+                <label for="tipRevenueCredit">Enter total tips from credit transactions:</label>
                 <div class="input-group input-group-md">
                     <span class="input-group-addon">$</span>
                     <input type="number" step="0.01" class="form-control" aria-label="Credit Tip Revenue" id="tipRevenueCredit" placeholder="123.45">
                 </div>
-                <label for="tipRevenueCash">Enter total tip revenue from cash:</label>
+                <br>
+                <label for="tipRevenueCash">Enter total tips from cash:</label>
                 <div class="input-group input-group-md">
                     <span class="input-group-addon">$</span>
                     <input type="number" step="0.01" class="form-control" aria-label="Cash Tip Revenue" id="tipRevenueCash" placeholder="123.45">
                 </div>
+                <br>
 			</div>
 		</div>
 
         <div class="container-fluid hidden" id="revenueEntryNav">
-            <div class='col-sm-6' align="center">
-                <button id="backToHoursEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back to Time Entry</button>
+            <div class='col-md-12' align="center">
+                <button id="backToHoursEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Enter Tips </button>
                 <button id="submitForm" class="btn btn-default">Finished <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
             </div>
         </div>
@@ -112,16 +116,15 @@
         </div>
 
         <div class="container-fluid hidden" id="poolResultsNav">
-            <div class='col-sm-6' align="center">
+            <div class='col-md-12' align="center">
                 <button id="backToRevenueEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back to Time Entry</button>
             </div>
         </div>
-
-        <footer class="footer">
-            <div class="container">
+        <div class="container-fluid">
+            <div class="col-md-12" align="center">
                 <p class="text-muted">Do not distribute the link to this page!</p>
             </div>
-        </footer>
+        </div>
 
     </body>
 </html>
