--- a/evensplit_hours_supportingroles.html
+++ b/evensplit_hours_supportingroles.html
@@ -23,7 +23,7 @@
         <nav class="navbar-collapse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="#">
                         <span class="glyphicon glyphicon-fire" aria-hidden="true"></span>
                          Just The Tip
                     </a>
@@ -57,7 +57,24 @@
 
         <div class="container-fluid" id="employeeEntryNav">
             <div class='col-md-12' align="center">
-                <button id="proceedToRevenueEntryFromEmployeeEntry" class="btn btn-default">Enter Tips <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+                <button id="proceedToEmployeeHoursEntry" class="btn btn-default">Enter Hours <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+            </div>
+        </div>
+
+        <div class="container-fluid hidden" id="employeeHoursEntryContainer">
+            <h3>Step 2: Enter Hours <span class="glyphicon glyphicon-time" aria-hidden="true"></span></h3>
+            <!--Employee Hours Entry-->
+			<div class="col-md-12">
+                <label for="employeeHoursEntry">Enter the number of hours worked by each employee:</label>
+				<div id="employeeHoursEntry"></div>
+			</div>
+        </div>
+        <br>
+
+        <div class="container-fluid hidden" id="hoursEntryNav">
+            <div class='col-md-12' align="center">
+                <button id="backToEmployeeEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Add Employees</button>
+                <button id="proceedToRevenueEntry" class="btn btn-default">Enter Tips <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
             </div>
         </div>
 
@@ -83,8 +100,8 @@
 
         <div class="container-fluid hidden" id="revenueEntryNav">
             <div class='col-md-12' align="center">
-                <button id="backToEmployeeEntryFromRevenueEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Enter Employees </button>
-                <button id="submitFormEven" class="btn btn-default">Finished <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+                <button id="backToHoursEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Enter Tips </button>
+                <button id="submitForm" class="btn btn-default">Finished <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
             </div>
         </div>
 
@@ -107,7 +124,7 @@
 
         <div class="container-fluid hidden" id="poolResultsNav">
             <div class='col-md-12' align="center">
-                <button id="backToRevenueEntryFromPoolResults" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back to Time Entry</button>
+                <button id="backToRevenueEntry" class="btn btn-default"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Back to Time Entry</button>
             </div>
         </div>
         <div class="container-fluid">
