--- a/evensplit_hours.html
+++ b/evensplit_hours.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height"/>
 
 		<script type="text/javascript" src="jquery-3.1.1.slim.js"></script>
 		<!-- Latest compiled and minified CSS -->
