fixed subheading for new feature.

--- a/evensplit_hours_supportingroles.html
+++ b/evensplit_hours_supportingroles.html
@@ -34,6 +34,7 @@
         <div class='container-fluid' id="pageName">
             <div class="col-md-12" align="center">
             <h2>Time-Based Split</h2>
+            <h4>With Support Staff</h4>
             </div>
         </div>
 
